# Basic_Neural_Network_Implementation

./: CMakeLists.txt  README.md
include/: Dense.h  Layer.h
src/: Dense.cpp  Layer.cpp
